# NNLibrary

./: .gitignore  CMakeLists.txt  README.md
src/: demo.cpp
src/context/: contexts.hpp  devices.hpp
src/network/: activation.hpp  layer.hpp  network.hpp  uniform_distribution.hpp
src/ops/: element_wise.hpp  matadd.hpp  matmul.hpp  mattranspose.hpp  operations.hpp
src/tensor/: storage.hpp  tensor.hpp
test/: activation_test.cpp  layer_test.cpp  network_test.cpp
